feat: create main section one

--- a/index.html
+++ b/index.html
@@ -48,7 +48,23 @@
                 </figure>
             </section>
         </header>
-       
+        <main>
+            <section class="section-1 container d-flex flex-column align-items-center text-center text-md-start p-2">
+                <div class="row align-items-center">
+                    <div class="col-md-6 mb-4 mb-md-0">
+                        <img src="./img/bg-preview.png" alt="Clinica" class="img-fluid">
+                    </div>
+                    <div class="col-md-6">
+                        <h2 class="mb-4">Software para clínica e consultórios</h2>
+                        <p class="mb-4">
+                            O Apache XAMPP é um software livre e gratuito que permite a você executar o Apache web server,
+                            PHP, MySQL e outros servidores web em um único sistema operacional.
+                        </p>
+                        <a class="btn btn-success rounded-pill px-4" href="#">Saiba mais</a>
+                    </div>
+                </div>
+            </section>
+        </main>
         
     </body>
 </html>
