feat: create section features

--- a/index.html
+++ b/index.html
@@ -64,6 +64,33 @@
                     </div>
                 </div>
             </section>
+            <section class="features-section">
+                <h2 class="section-title text-center">Explore os recursos do Heapp</h2>
+                <section class="features-container">
+                    <div class="features-text">
+                        <h3 class="features-title">Agendamentos</h3>
+                        <ul class="features-list">
+                            <li>Agendamento de consultas</li>
+                            <li>Agendamento de exames</li>
+                            <li>Agendamento de atendimentos médicos</li>
+                            <li>Agendamento de vacinas</li>
+                            <li>Agendamento de reservas</li>
+                            <li>Agendamento de exames de laboratório</li>
+                            <li>Agendamento de consultas de psicologia</li>
+                            <li>Agendamento de consultas de fonoaudiologia</li>
+                            <li>Agendamento de consultas de terapia ocupacional</li>
+                            <li>Agendamento de consultas de saúde mental</li>
+                            <li>Agendamento de consultas de diagnóstico de saúde</li>
+                            <li>Agendamento de consultas de terapia intensiva</li>
+                        </ul>
+                        <a class="btn btn-start rounded-pill" href="#">Começar</a>
+                    </div>
+                    <figure class="features-image">
+                        <img src="img/doctor-wearing.png" alt="Doutora jovem" class="img-fluid">
+                    </figure>
+                </section>
+            </section> 
+            
         </main>
         
     </body>
